--- a/app-parent/pom.xml
+++ b/app-parent/pom.xml
@@ -22,6 +22,7 @@
         <mysql.version>5.1.32</mysql.version>
         <slf4j-log4j12.version>1.6.4</slf4j-log4j12.version>
         <jackson-databind.version>2.8.7</jackson-databind.version>
+        <fastjson.version>1.2.47</fastjson.version>
         <druid.version>1.0.9</druid.version>
         <c3po.version>0.9.1</c3po.version>
         <httpclient.version>4.3.5</httpclient.version>
