--- a/app-common/pom.xml
+++ b/app-common/pom.xml
@@ -114,6 +114,13 @@
             <version>1.1.0</version>
         </dependency>
 
+        <!--阿里云OSS对象存储 -->
+        <dependency>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+            <version>2.8.3</version>
+        </dependency>
+
         <!-- 二维码的生成与解析 -->
         <dependency>
             <groupId>com.google.zxing</groupId>
