--- a/app-template1/pom.xml
+++ b/app-template1/pom.xml
@@ -10,21 +10,24 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>app-message</artifactId>
-    <groupId>com.fx</groupId>
+    <artifactId>app-template1</artifactId>
     <packaging>war</packaging>
 
     <dependencies>
+
         <dependency>
             <groupId>com.fx</groupId>
             <artifactId>app-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+
         <dependency>
             <groupId>com.fx</groupId>
             <artifactId>app-mapper</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
 
         <!-- Spring -->
         <dependency>
@@ -66,12 +69,15 @@
             <scope>provided</scope>
         </dependency>
 
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+
+
     </dependencies>
 
     <!-- 配置插件 -->
@@ -81,7 +87,7 @@
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <configuration>
-                    <port>8082</port>
+                    <port>8083</port>
                     <path>/</path>
                 </configuration>
             </plugin>
