--- a/app-sso/src/main/resources/resource/resource.properties
+++ b/app-sso/src/main/resources/resource/resource.properties
@@ -2,5 +2,5 @@
 #用户session在redis中保存的key
 REDIS_USER_SESSION_KEY=redis_user_session
 
-#设置session的过期时间30分钟
-REDIS_SESSION_EXPIRE=1800
+#设置session的过期时间7天，后期上线再更改
+REDIS_SESSION_EXPIRE=604800
