--- a/app-common/pom.xml
+++ b/app-common/pom.xml
@@ -153,6 +153,17 @@
             <version>1.3.2</version>
         </dependency>
 
+        <!-- 添加操作zk的客户端curator -->
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-framework</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-recipes</artifactId>
+            <version>2.11.0</version>
+        </dependency>
     </dependencies>
 
 
