--- a/app-template1/src/main/resources/resource/db.properties
+++ b/app-template1/src/main/resources/resource/db.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://39.108.102.177:3306/app
+jdbc.url=jdbc:mysql://47.107.176.65:3306/app
 jdbc.username=root
-jdbc.password=123
+jdbc.password=fanxun123
