--- a/app-template1/src/main/webapp/WEB-INF/web.xml
+++ b/app-template1/src/main/webapp/WEB-INF/web.xml
@@ -61,4 +61,14 @@
     <url-pattern>/</url-pattern>
   </filter-mapping>
 
+  <!-- 配置跨域的解决 -->
+  <filter>
+    <filter-name>CrosFilter</filter-name>
+    <filter-class>com.fanxun.template1.interceptor.CROSFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>CrosFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
 </web-app>
